--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is a website I made for J&J Flooring Company. The site can be viewed live at http://jjflooringpros.com/
+
+Copyright beramiah 2014
